k3s/apps/base/job-platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-platform
  labels:
    toolkit.fluxcd.io/tenant: sre-team
